istio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-a
  namespace: default
  labels:
    app:  nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  nginx
        version: A
    spec:
      containers:
      - name:  nginx
        image:  wesleywillians/nginx-ab
        ports:
        - containerPort:  80
          name:  nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-b
  namespace: default
  labels:
    app:  nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  nginx
        version: B
    spec:
      containers:
      - name:  nginx
        image:  wesleywillians/nginx-ab:b
        ports:
        - containerPort:  80
          name:  nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: nginx
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: nginx
    protocol: TCP
    port: 8000
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort: 30000
